--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-</head>
+</head>x
 <body>
     <!-- Cabeçalho -->
     <nav class="nav-bar">
@@ -36,6 +36,16 @@
         <h1>Fernando Ferreira</h1>
         <span class="dynamic-text" id="typed"></span>
     </section>
+
+    <!-- Secção Início -->
+    <div class="button-container">
+        <button class="button" onclick="scrollToTop()">
+            <span>↑</span>
+        </button>
+        <button class="button" onclick="scrollToBottom()">
+            <span>↓</span>
+        </button>
+    </div>
 
     <!-- Secção Sobre Mim -->
 <section id="about" class="about">
