--- a/projetos.html
+++ b/projetos.html
@@ -6,8 +6,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/projetos.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    pinis
+    <!-- Cabeçalho -->
+    <nav class="nav-bar">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="index.html">Portfólio</a></li>
+            <li class="nav-item divider"></li>
+            <li class="nav-item"><a class="nav-link" href="projetos.html ">Projetos</a></li>
+        </ul>
+    </nav>
+
+    <section id="projects-container"></section>
+
+    <script src="js/projetos.js"></script>
 </body>
 </html>
