--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
             <i class="fab fa-java" title="Java"></i>
             <i class="fab fa-html5" title="HTML"></i>
             <i class="fab fa-css3-alt" title="CSS"></i>
-            <i class="fas fa-code" title="C#"></i> <!-- Ícone genérico para C# -->
+            <i class="fa-brands fa-js"></i>
+            <i class="fa-brands fa-git-alt"></i>
+            <i class="fa-brands fa-linux"></i>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-rust"></i>
+
         </div>
     </div>
     <!-- JavaScript -->
